--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,12 +6,14 @@ on:
       - main
   pull_request:
   workflow_dispatch: # Enables manual runs
+  schedule:
+    - cron: "17 7 * * 0" # Runs every Sunday at 3:00 AM Eastern Time (7:00 AM UTC)
 
 jobs:
   test-bot:
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [macos-14, macos-15]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Homebrew
